the overflow was fixed

--- a/www/public/stylesheets/generic.css
+++ b/www/public/stylesheets/generic.css
@@ -772,6 +772,7 @@ img {
 	-moz-border-radius: 5px;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
+	overflow:auto;
 	margin: 5px 0px;
 }
 
